[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "influencerpy"
version = "0.1.0"
description = "Premium Social Media Automation CLI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Cristian Leo", email = "cristian@example.com" },
]
dependencies = [
  "typer[all]",
  "tweepy",
  "python-telegram-bot",
  "python-dotenv",
  "rich",
  "sqlmodel",
  "feedparser",
  "requests",
  "google-generativeai",  # For embeddings/generation
  "questionary",
  "pyfiglet",
  "mkdocs-material",
  "arxiv",
  "beautifulsoup4",
]

[project.scripts]
influencerpy = "influencerpy.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/influencerpy"]
